--- a/GameStore.WebUI/Views/Admin/Edit.cshtml
+++ b/GameStore.WebUI/Views/Admin/Edit.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewBag.Title = "Админ панель: редактирование товара";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    HtmlHelper.ClientValidationEnabled = true;
+    HtmlHelper.UnobtrusiveJavaScriptEnabled = true;
 }
 
 <div class="panel">
@@ -10,7 +12,7 @@
         <h3>Редактирование игры «@Model.Name»</h3>
     </div>
 
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Edit", "Admin"))
     {
         <div class="panel-body">
             @Html.HiddenFor(m => m.GameId)
