--- a/GameStore.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/GameStore.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -9,6 +9,9 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
     <link href="~/Content/ErrorStyles.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
     <title></title>
 </head>
 <body>
